# recipes_app

./: .gitignore  README.md  pyproject.toml
src/recipes_app/: Ground-Beef-recipe-20250222_234646.md  crew.py  main.py  meals-recipe.md
src/recipes_app/config/: agents.yaml  tasks.yaml
