[project]
name = "recipes_app"
version = "0.1.0"
description = "recipes_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
recipes_app = "recipes_app.main:run"
run_crew = "recipes_app.main:run"
train = "recipes_app.main:train"
replay = "recipes_app.main:replay"
test = "recipes_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
